Fixed z-index for AdminSwitch

--- a/web/src/components/Cover/AdminSwitch/AdminSwitch.module.scss
+++ b/web/src/components/Cover/AdminSwitch/AdminSwitch.module.scss
@@ -2,4 +2,6 @@
 	position: fixed;
 	bottom: 10px;
 	left: 10px;
+
+	z-index: 10000;
 }
